// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/space/demo/align.md correctly 1`] = `
<div
  class="space-align-container"
>
  <div
    class="space-align-block"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        center
      </div>
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
  <div
    class="space-align-block"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-start"
    >
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        start
      </div>
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
  <div
    class="space-align-block"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-end"
    >
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        end
      </div>
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
  <div
    class="space-align-block"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-baseline"
    >
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        baseline
      </div>
      <div
        class="ant-space-item"
        style="margin-right:8px"
      >
        <button
          class="ant-btn ant-btn-primary"
          type="button"
        >
          <span>
            Primary
          </span>
        </button>
      </div>
      <div
        class="ant-space-item"
      >
        <span
          class="mock-block"
        >
          Block
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/space/demo/base.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    Space
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <span
      class=""
    >
      <div
        class="ant-upload ant-upload-select ant-upload-select-text"
      >
        <span
          class="ant-upload"
          role="button"
          tabindex="0"
        >
          <input
            accept=""
            style="display:none"
            type="file"
          />
          <button
            class="ant-btn"
            type="button"
          >
            <span
              aria-label="upload"
              class="anticon anticon-upload"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
            <span>
               Click to Upload
            </span>
          </button>
        </span>
      </div>
      <div
        class="ant-upload-list ant-upload-list-text"
      />
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Confirm
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/space/demo/customize.md correctly 1`] = `
Array [
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;right:auto;width:8%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="8"
      class="ant-slider-handle"
      role="slider"
      style="left:8%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>,
  <br />,
  <br />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Default
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        class="ant-btn ant-btn-dashed"
        type="button"
      >
        <span>
          Dashed
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link"
        type="button"
      >
        <span>
          Link
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders ./components/space/demo/debug.md correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    Button
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Button
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    Button
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Delete
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    <span
      class="ant-popover-disabled-compatible-wrapper"
      style="display:inline-block;cursor:not-allowed"
    >
      <button
        class="ant-btn"
        disabled=""
        style="pointer-events:none"
        type="button"
      >
        <span>
          Delete
        </span>
      </button>
    </span>
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px"
  >
    1
  </div>
  <div
    class="ant-space-item"
  >
    Button
  </div>
</div>
`;

exports[`renders ./components/space/demo/responsive.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-responsive ant-space-align-center"
>
  <div
    class="ant-space-item"
    style="margin-bottom:10px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:10px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:10px"
  >
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/space/demo/size.md correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Middle
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          Primary
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        class="ant-btn"
        type="button"
      >
        <span>
          Default
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
      style="margin-right:8px"
    >
      <button
        class="ant-btn ant-btn-dashed"
        type="button"
      >
        <span>
          Dashed
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <button
        class="ant-btn ant-btn-link"
        type="button"
      >
        <span>
          Link
        </span>
      </button>
    </div>
  </div>,
]
`;

exports[`renders ./components/space/demo/vertical.md correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="ant-card ant-card-bordered"
      style="width:300px"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Card
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-card ant-card-bordered"
      style="width:300px"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            Card
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
</div>
`;
